syntax = "proto3";
package rpcpb;
message RPCInfo {
    string Cid = 1;
    string Fn = 2;
    string ReplyTo = 3;
    string track = 4;
    int64 Expired = 5;
    bool Reply = 6;
    string SessionId = 7;
    bytes Args = 8;
    int32 ByteFn = 9;
}

message ResultInfo {
    string Cid = 1;
    string Error = 2;
    int32 ErrorCode = 3;
    string ResultType = 4;
    bytes Result = 5;
}